@@ -1098,6 +1098,28 @@ class Article {
 		$isRedirect = !is_null($redirectTitle);
 		if ($isRedirect || is_null($lastRevIsRedirect) || $lastRevIsRedirect !== $isRedirect) {
 
+			$imageResult = true;	//Result of imageredirects handling
+			file_put_contents( "C:\\err.txt", strval( $this->mTitle->getNamespace() == NS_IMAGE ) );
+			if( $this->mTitle->getNamespace() == NS_IMAGE ) {
+				wfProfileIn( __METHOD__ . "-img" );
+
+				$exists = $redirectTitle ? RepoGroup::singleton()->findFile( $redirectTitle->getDBkey() ) !== false : false;
+				if( $isRedirect && $redirectTitle->getNamespace() == NS_IMAGE && $exists ) {
+					$set = array( 
+						'ir_from' => $this->mTitle->getDBkey(),
+						'ir_to' => $redirectTitle->getDBkey(),
+					);
+					$dbw->replace( 'imageredirects', array( 'ir_from' ), $set, __METHOD__ );
+					$imageResult = $dbw->affectedRows() != 0;
+				} else {
+					// Non-redirect or redirect to non-image
+					$where = array( 'ir_from' => $this->mTitle->getDBkey() );
+					$dbw->delete( 'imageredirects', $where, __METHOD__ );
+				}
+
+				wfProfileOut( __METHOD__ . "-img" );
+			}
+
 			wfProfileIn( __METHOD__ );
 
 			if ($isRedirect) {
@@ -1117,7 +1139,7 @@ class Article {
 			}
 
 			wfProfileOut( __METHOD__ );
-			return ( $dbw->affectedRows() != 0 );
+			return ( $dbw->affectedRows() != 0 ) && $imageResult;
 		}
 
 		return true;
